styles/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
}

header {
  color: #f9faf8;
  padding: 2% 10%;
}

.container {
  padding: 8% 10%;
}

section.hero.container {
  display: flex;
  gap: 40px;
}

.hero > div {
  flex: 1 1 auto;
}

.hero_image {
  max-height: 200px;
  width: auto;
}

.logo {
  font-size: 24px;
  font-weight: 900;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav ul {
  display: flex;
  gap: 20px;
}

h1 {
  color: #f9faf8;
  font-size: 48px;
  font-weight: 900;
}

h2 {
  margin: 40px 0;
  font-size: 36px;
  font-weight: 900;
  text-align: center;
}

h3 {
  font-weight: 900;
}

.hero p,
nav a {
  color: #e5e7eb;
  font-size: 18px;
  text-decoration: none;
}

header,
.hero,
footer {
  background-color: #1f2937;
}

.btn {
  margin: 10px 0;
  background: #3882f6;
  color: #f9faf8;
  display: inline-block;
  border-radius: 5px;
  width: 120px;
  height: 35px;
  line-height: 35px;
  text-decoration: none;
  text-align: center;
}

.flex {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.random {
  width: 125px;
  text-align: center;
}

.random > div {
  margin: 5px 0;
  height: 125px;
  width: 125px;
  border: 2px solid blue;
  border-radius: 10px;
}

.container.quote {
  margin-top: 80px;
  background: #e5e7eb;
  color: #1f2937;
}

.quote > p {
  font-size: 36px;
  font-weight: 300;
  font-style: italic;
}

cite {
  font-weight: 700;
  font-size: 24px;
  display: block;
  text-align: right;
}

section.action {
  background: #3882f6;
  color: #f9faf8;
  margin: 5% 10%;
  padding: 20px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  border-radius: 5px;
}

.btn.action {
  border: 1px solid #f9faf8;
}

footer {
  color: #f9faf8;
  text-align: center;
  padding: 30px 0;
}

